save language preferences

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -1,13 +1,13 @@
 getWeather=Get Weather
 hourlyForecast=Hourly Forecast
-weatherInfo=City: %s\nTemperature: %.2f°C\nHumidity: %d%%\nDescription: %s
+weatherInfo=City: %s\nTemperature: %.2fÂ°C\nHumidity: %d%%\nDescription: %s
 errorFetchingWeatherData=Error fetching weather data
 errorFetchingForecastData=Error fetching forecast data
 temperature=Temperature
 windSpeed=Wind Speed
 pressure=Pressure (scaled)
 humidity=Humidity
-temperatureC=Temperature (°C)
+temperatureC=Temperature (Â°C)
 windSpeedMs=Wind Speed (m/s)
 pressureHpa10=Pressure (hPa / 10)
 humidityPercent=Humidity (%)
@@ -15,3 +15,5 @@ humidityPercent=Humidity (%)
 hello=hello
 weather=weather
 OK=OK
+
+settings=Settings
