Prepare code before merging

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -5,12 +5,15 @@ weather=weather
 OK=OK
 
 
+fetchingError=Error fetching weather data
+errorCode=Error code
+
 dateTimeColumn=Date/Time
 iconColumn=Temperature
 humidityColumn=Humidity
 descriptionColumn=Description
 
-getForecastLabel=5 Days Forecast
+getForecastLabel=5 Days Forecast with 3 hours step
 
 thunderstorm\ with\ light\ rain=Thunderstorm with Light Rain
 thunderstorm\ with\ rain=Thunderstorm with Rain
