fix properties after merge

--- a/src/main/resources/localization.properties
+++ b/src/main/resources/localization.properties
@@ -16,8 +16,6 @@ hello=hello
 weather=weather
 OK=OK
 
-<<<<<<< HEAD
-
 fetchingError=Error fetching weather data
 errorCode=Error code
 
@@ -38,7 +36,8 @@ ragged\ thunderstorm=Ragged Thunderstorm
 thunderstorm\ with\ light\ drizzle=Thunderstorm with Light Drizzle
 thunderstorm\ with\ drizzle=Thunderstorm with Drizzle
 thunderstorm\ with\ heavy\ drizzle=Thunderstorm with Heavy Drizzle
-light\ intensity\ drizzle=Light Intensity Drizzle
+light\ intensity\ drizzle=Light Intensit
+y Drizzle
 drizzle=Drizzle
 heavy\ intensity\ drizzle=Heavy Intensity Drizzle
 light\ intensity\ drizzle\ rain=Light Intensity Drizzle Rain
@@ -95,8 +94,4 @@ moderate\ breeze=Moderate Breeze
 fresh\ breeze=Fresh Breeze
 strong\ breeze=Strong Breeze
 
-
-
-=======
 settings=Settings
->>>>>>> main
